# scikit-ika

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  documentation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  reference.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  tutorial.html
_autosummary/: skika.data.bernoulli_stream.html  skika.data.generate_dataset.datastreamOptions.html  skika.data.generate_dataset.html  skika.data.hyper_plane_generator_redund.html  skika.data.random_rbf_generator_redund.html  skika.data.reccurring_concept_stream.html  skika.data.stream_generator.html  skika.data.stream_generator_redundancy_drift.html  skika.data.synthetic.reccurring_concept_stream.html  skika.data.synthetic.wind_sim_generator.html  skika.data.wind_sim_generator.html  skika.evaluation.inspect_recurrence.html  skika.hyper_parameter_tuning.drift_detectors.AutoDDM.html  skika.hyper_parameter_tuning.drift_detectors.build_pareto_knowledge_drifts.html  skika.hyper_parameter_tuning.drift_detectors.evaluate_drift_detection_experiment.html  skika.hyper_parameter_tuning.drift_detectors.evaluate_drift_detection_knowledge.html  skika.hyper_parameter_tuning.trees_arf.build_pareto_knowledge_trees.html  skika.hyper_parameter_tuning.trees_arf.evaluate_prequential_and_adapt.html  skika.hyper_parameter_tuning.trees_arf.meta_feature_generator.html  skika.visualisation.wind_sim_visualisation.html
_sources/: documentation.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt
_static/: script.py  script.py~
docs/: conf.py  documentation.rst  index.rst  installation.rst  reference.rst  team.rst  tutorial.rst
hyper_parameter_tuning/: build_pareto_knowledge_drifts.py  build_pareto_knowledge_trees.py
skika/: __init__.py
tests/: conftest.py
(+248 files in other folders)
